--- a/.config/i3/config
+++ b/.config/i3/config
@@ -52,6 +52,7 @@ floating_modifier $mod
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
+focus_follows_mouse no
 
 # start a terminal
 bindsym $mod+t exec kitty
@@ -60,8 +61,10 @@ bindsym $mod+t exec kitty
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show drun
-# A more modern dmenu replacement is rofi:
+bindsym $mod+d exec --no-startup-id rofi -show-icons -show drun
+
+# change tabs
+bindsym $mod+Tab exec --no-startup-id rofi -show-icons -show window
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -99,7 +102,9 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+z focus child
+
+bindsym $mod+m move workspace to output next
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -131,6 +136,7 @@ bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
 bindsym $mod+Shift+4 move container to workspace number $ws4
+exec_always --no-startup-id i3-msg 'debuglog on; shmlog on; reload'
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
@@ -164,23 +170,38 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-exec_always i3-msg 'debuglog on; shmlog on; reload'
-exec --no-startup-id $HOME/.config/polybar/launch.sh
+
+# Machine Specific
+workspace 1 output DP-0
+workspace 2 output DP-4
 
 # Styling
 
-default_border pixel 2
-default_floating_border pixel 3
+default_border pixel 3
+default_floating_border pixel 4
 
-# class                 border  backgr. text    indicator child_border
-client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
-client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+# get colours from pywal
+set_from_resource $fg i3wm.color7 #f0f0f0
+set_from_resource $active i3wm.color2 #f0f0f0
+set_from_resource $urgent i3wm.color1 #f0f0f0
+set_from_resource $inactive i3wm.color4 #f0f0f0
+set_from_resource $bg i3wm.color5 #f0f0f0
+
+# class                 border    backgr.   text    indicator child_border
+client.focused          $active   $active   $fg     $active   $active
+client.focused_inactive $inactive $inactive $fg     $inactive $inactive
+client.unfocused        $bg       $bg       $fg     $bg       $bg
+client.urgent           $urgent   $urgent   $fg     $urgent   $urgent
+client.placeholder      $fg       $bg       $fg     $bg       $bg
 
 client.background       #ffffff
 
 gaps inner 10px
 
-exec_always --no-startup-id feh --bg-fill ~/Pictures/waves.jpg --bg-fill ~/Pictures/waves.jpg
+
+# reset colours with pywal
+exec_always --no-startup-id wal -n -R
+exec_always --no-startup-id feh --bg-fill ~/Pictures/bmountains.jpg --bg-fill ~/Pictures/bmountains.jpg
+
+#launch polybar
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
