--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,12 +17,12 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
-background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
-secondary = #8ABEB7
-alert = #A54242
+background = ${xrdb:color0:#222}
+foreground = ${xrdb:color7:#222}
+foreground-alt = ${xrdb:color7:#222}
+primary = ${xrdb:color1:#222}
+secondary = ${xrdb:color2:#222}
+alert = ${xrdb:color3:#222}2
 disabled = #707880
 
 [bar/primary]
@@ -50,10 +50,11 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = CodeNewRoman Nerd Font Mono;2
+font-1 = CodeNewRoman Nerd Font Mono:size=16;4.5
 
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-left = i3
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date tray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -82,6 +83,7 @@ tray-spacing = 16pt
 
 [module/xworkspaces]
 type = internal/xworkspaces
+group-by-monitor = true
 
 label-active = %name%
 label-active-background = ${colors.background-alt}
@@ -103,13 +105,45 @@ label-empty-padding = 1
 type = internal/xwindow
 label = %title:0:60:...%
 
+[module/i3]
+type = internal/i3
+
+pin-workspaces = true
+
+;ws-icon-default = %{T2}
+;ws-icon-0 = 1;%{T2}󰲠
+;ws-icon-1 = 2;%{T2}
+;ws-icon-2 = 3;%{T2}
+;ws-icon-3 = 4;%{T2}
+;ws-icon-4 = 5;%{T2}
+
+label-focused = %{T2}%index%
+label-focused-foreground = ${colors.primary}
+label-focused-padding = 1
+label-focused-font = 1
+
+label-unfocused = %{T2}%index%
+label-unfocused-foreground = ${colors.disabled}
+label-unfocused-padding = 1
+label-unfocused-font = 1
+
+label-visible = %{T2}%index%
+label-visible-foreground = ${colors.disabled}
+label-visible-padding = 1
+label-visible-font = 1
+
+label-urgent = %{T2}%index%
+label-urgent-foreground = #800000
+label-urgent-padding = 1
+label-urgent-font = 1
+
 [module/filesystem]
 type = internal/fs
 interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -157,17 +191,17 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected = %ifname%%{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %ifname%%{F-} %essid% %local_ip%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
@@ -186,7 +220,7 @@ pseudo-transparency = true
 [bar/secondary]
 inherit = bar/primary
 monitor = DP-4
-modules-left = xworkspaces xwindow
+modules-left = i3
 modules-right = date
 
 ; vim:ft=dosini
