--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,7 +25,8 @@ exec --no-startup-id dex --autostart --environment i3
 
 # Monitor configuration
 exec_always --no-startup-id xrandr --output DP-0 --mode 1920x1080 --rate 144 --primary
-exec_always --no-startup-id xrandr --output DP-4 --mode 1920x1080 --rate 60 --right-of DP-0
+exec_always --no-startup-id xrandr --output DP-4 --off 
+# --mode 1920x1080 --rate 60 --right-of DP-0
 
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
@@ -40,11 +41,10 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -177,15 +177,17 @@ workspace 2 output DP-4
 
 # Styling
 
+exec_always --no-startup-id xrdb -merge -quiet ~/.config/Xresources
+
 default_border pixel 3
 default_floating_border pixel 4
 
 # get colours from pywal
 set_from_resource $fg i3wm.color7 #f0f0f0
-set_from_resource $active i3wm.color2 #f0f0f0
+set_from_resource $active i3wm.color3 #f0f0f0
 set_from_resource $urgent i3wm.color1 #f0f0f0
-set_from_resource $inactive i3wm.color4 #f0f0f0
-set_from_resource $bg i3wm.color5 #f0f0f0
+set_from_resource $inactive i3wm.color2 #f0f0f0
+set_from_resource $bg i3wm.color0 #f0f0f0
 
 # class                 border    backgr.   text    indicator child_border
 client.focused          $active   $active   $fg     $active   $active
@@ -200,7 +202,7 @@ gaps inner 10px
 
 
 # reset colours with pywal
-exec_always --no-startup-id wal -n -R
+exec_always --no-startup-id wallust cs ~/.cache/wallust/1.5_4_2_00_0_0_0_0_l1u3t5.json
 exec_always --no-startup-id feh --bg-fill ~/Pictures/bmountains.jpg --bg-fill ~/Pictures/bmountains.jpg
 
 #launch polybar
