--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -18,11 +18,11 @@
 
 [colors]
 background = ${xrdb:color0:#222}
-foreground = ${xrdb:color7:#222}
-foreground-alt = ${xrdb:color7:#222}
-primary = ${xrdb:color1:#222}
-secondary = ${xrdb:color2:#222}
-alert = ${xrdb:color3:#222}2
+foreground = ${xrdb:color6:#222}
+foreground-alt = ${xrdb:color5:#222}
+primary = ${xrdb:color4:#222}
+secondary = ${xrdb:color3:#222}
+alert = ${xrdb:color2:#222}2
 disabled = #707880
 
 [bar/primary]
@@ -52,9 +52,10 @@ separator-foreground = ${colors.disabled}
 
 font-0 = CodeNewRoman Nerd Font Mono;2
 font-1 = CodeNewRoman Nerd Font Mono:size=16;4.5
+font-2 = CodeNewRoman Nerd Font Mono:size=22;4.5
 
 modules-left = i3
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date tray
+modules-right = pulseaudio xkeyboard memory cpu wlan date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -151,7 +152,7 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
+format-volume-prefix = "%{T3}󰋋%{T-} "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
@@ -175,14 +176,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = "%{T3}%{T-} "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = "%{T3}%{T-}"
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
