commiting to hyprland on xps

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,12 +23,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = DP-3, 1920x1080@60, 1920x0, 1
-monitor = DP-1, 1920x1080@144, 0x0, 1
-monitor = DP-3, disable
-
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+monitor = eDP-1, 1920x1080@144, 0x0, 1.875
+monitor = , preferred, auto, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -217,8 +213,8 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, T, exec, $terminal
+bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, F12, exec, shutdown -h now
 bind = $mainMod, E, exec, $fileManager
