--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
-preload = /home/flynn/Pictures/waves.jpg
-wallpaper = DP-1,/home/flynn/Pictures/waves.jpg
-wallpaper = DP-3,/home/flynn/Pictures/waves.jpg
+preload = /home/flynn/Pictures/studio-ghibli.jpg
+wallpaper = eDP-1,/home/flynn/Pictures/studio-ghibli.jpg
