Added users file and some other stuff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $menu = rofi -show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & hyprpaper & firefox & pywal -R
 
 
 #############################
@@ -188,7 +188,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -221,6 +221,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, TAB, exec, rofi -show-icons -show window
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
