mainly nvim changes

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/flynn/Pictures/studio-ghibli.jpg
-wallpaper = eDP-1,/home/flynn/Pictures/studio-ghibli.jpg
+preload = /home/flynn/Pictures/sinceileftyou.jpeg
+wallpaper = ,/home/flynn/Pictures/sinceileftyou.jpeg
