--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,7 +23,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = eDP-1, 1920x1080@144, 0x0, 1.875
+monitor = eDP-1, 3840x2160@60, 0x0, 2.0
+monitor = DVI-I-1, 1920x1080@60, -1920x-600, 1.0
 monitor = , preferred, auto, 1
 
 ###################
@@ -57,10 +58,10 @@ exec-once = waybar & hyprpaper & firefox & pywal -R
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env=XCURSOR_THEME,breeze
+#env = XCURSOR_SIZE,24
+#env=XCURSOR_THEME,breeze
 # env = HYPRCURSOR_SIZE,24
-exec-once=hyprctl setcursor Vimix-Cursors 20
+exec-once=hyprctl setcursor Vimix-Cursors 28
 
 #####################
 ### LOOK AND FEEL ###
@@ -216,7 +217,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, F12, exec, shutdown -h now
+bind = SUPER_SHIFT, End, exec, shutdown -h now
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, V, togglefloating,
