no useful message for u

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -25,7 +25,7 @@
             "escape": true
         },
         "clock": {
-            "format": "{:%I:%M:%S %p} ",
+            "format": "{:%d/%m %H:%M:%S} ",
             "interval": 1,   
     	    "tooltip-format": "{:%Y-%m-%d}"
         },
@@ -48,7 +48,7 @@
             "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
             "tooltip-format-enumerate-connected": "{device_alias}\n{device_address}",
             "tooltip-format-enumerate-connected-battery": "{device_alias}\n{device_address}\n{device_battery_percentage}%",
-            "on-click-right": "blueman-manager",
+            "on-click": "blueman-manager",
         }, 
         "battery": {
             "interval":30,
